# sonic-block-tok

./: .npmrc  BLOCKCHAIN-INTEGRATION.md  DEPENDENCIES.md  README.md  SETUP.md  next.config.js  next.config.ts  package-lock.json  package.json  railway.toml
contracts/anchor-blocktok/: Anchor.toml
contracts/anchor-blocktok/blocktok/: Anchor.toml
contracts/anchor-blocktok/programs/blocktok/: Cargo.toml
contracts/anchor-blocktok/programs/blocktok/src/: lib.rs
contracts/blocktok/: Cargo.toml  README.md
contracts/blocktok/src/: error.rs  lib.rs  metaplex_token_metadata.rs  processor.rs
contracts/blocktok/tests/: nft.rs
public/thumbnails/: .gitkeep
public/videos/: .gitkeep
src/app/: combined-home.tsx  globals.css  layout.tsx  page.tsx
src/app/create/: page.tsx
src/app/dashboard/: page.tsx
src/app/discover/: DiscoverClient.tsx  page.tsx
src/app/profile/: page.tsx
src/app/upload/: page.tsx
src/components/: BlockchainProvider.tsx  ClientHomePage.tsx  ContentForm.tsx  NavBar.tsx  ThemeProvider.tsx  WalletProviders.tsx
src/components/layout/: MainLayout.tsx  MobileNav.tsx  Navbar.tsx
src/components/ui/: avatar.tsx  button.tsx  toaster.tsx  use-toast.ts
src/components/video/: VideoCard.tsx  VideoFeed.tsx  VideoGenerator.tsx  VideoPlayer.tsx
src/components/wallet/: ConnectButton.tsx
src/contexts/: WalletContext.tsx
src/contracts/anchor-blocktok/: Anchor.toml  package.json
src/contracts/blocktok/: .gitignore  Makefile
src/lib/: mock-data.ts  textToVideoApi.ts  textToVideoApiFixed.ts  types.ts  utils.ts  wallet.ts
src/types/: window.d.ts
(+28 files in other folders)
