[package]
name = "blocktok"
version = "0.1.0"
description = "BlockTok - NFT minting for content creators"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "blocktok"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
mpl-token-metadata = { version = "1.12.0", features = ["no-entrypoint"] } 